@@ -2,13 +2,10 @@
 
 package edu.colorado.phet.phscale;
 
-import java.lang.reflect.InvocationTargetException;
-
-import javax.swing.SwingUtilities;
-
+import edu.colorado.phet.common.phetcommon.application.PhetApplication;
 import edu.colorado.phet.common.phetcommon.application.PhetApplicationConfig;
+import edu.colorado.phet.common.phetcommon.application.PhetApplicationConfig.ApplicationConstructor;
 import edu.colorado.phet.common.phetcommon.view.PhetFrame;
-import edu.colorado.phet.common.phetcommon.view.PhetLookAndFeel;
 import edu.colorado.phet.common.piccolophet.PiccoloPhetApplication;
 import edu.colorado.phet.phscale.developer.DeveloperMenu;
 
@@ -71,40 +68,16 @@ public class PHScaleApplication extends PiccoloPhetApplication {
     //----------------------------------------------------------------------------
     // main
     //----------------------------------------------------------------------------
-
-    /**
-     * Main entry point.
-     *
-     * @param args command line arguments
-     * @throws InvocationTargetException
-     * @throws InterruptedException
-     */
+    
     public static void main( final String[] args ) {
-
-        /*
-         * Wrap the body of main in invokeLater, so that all initialization occurs
-         * in the event dispatch thread. Sun now recommends doing all Swing init in
-         * the event dispatch thread. And the Piccolo-based tabs in TabbedModulePanePiccolo
-         * seem to cause startup deadlock problems if they aren't initialized in the
-         * event dispatch thread. Since we don't have an easy way to separate Swing and
-         * non-Swing init, we're stuck doing everything in invokeLater.
-         */
-        SwingUtilities.invokeLater( new Runnable() {
-
-            public void run() {
-                
-                // Initialize look-and-feel
-                PhetLookAndFeel laf = new PhetLookAndFeel();
-                laf.initLookAndFeel();
-
-                PhetApplicationConfig config = new PhetApplicationConfig( args, PHScaleConstants.FRAME_SETUP, PHScaleResources.getResourceLoader() );
-
-                // Create the application.
-                PHScaleApplication app = new PHScaleApplication( config );
-
-                // Start the application.
-                app.startApplication();
+        
+        ApplicationConstructor appConstructor = new ApplicationConstructor() {
+            public PhetApplication getApplication( PhetApplicationConfig config ) {
+                return new PHScaleApplication( config );
             }
-        } );
+        };
+        
+        PhetApplicationConfig appConfig = new PhetApplicationConfig( args, appConstructor, PHScaleConstants.PROJECT_NAME );
+        appConfig.launchSim();
     }
 }
